# hackathons

Hyle-Faucet/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
Hyle-Faucet/app/: globals.css  layout.tsx  page.tsx
Hyle-Faucet/components/ui/: select.tsx  tabs.tsx
ecdsa-identity/contract/: Cargo.toml
ecdsa-identity/contract/src/: lib.rs
ecdsa-identity/host/src/: main.rs
oidc-identity/: Cargo.toml
oidc-identity/contract/: Cargo.toml
oidc-identity/contract/src/: jwt.rs
oidc-identity/host/: Cargo.toml  config.toml
oidc-identity/host/src/: main.rs  oidc_client.rs
oidc-identity/oidc_identity/: Cargo.toml
oidc-identity/oidc_identity/examples/: host.rs
oidc-identity/oidc_identity/src/: client.rs  lib.rs  main.rs
oidc-identity/oidc_provider/: Cargo.toml
oidc-identity/oidc_provider/src/: lib.rs  provider.rs
