[package]
name = "oidc_identity"
version = "0.1.0"
edition = "2021"
# license = { workspace = true }
rust-version = "1.84"

[[bin]]
name = "oidc_identity"
required-features = ["risc0"]
test = false

[[example]]
name = "oidc_identity-runner"
path = "examples/host.rs"

[dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", tag = "v0.9.0" }

serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
anyhow = "1.0.95"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
bincode = { version = "2.0.0-rc.3" }
hex = "0.4.3"

risc0-zkvm = { version = "1.2.2", default-features = false, optional = true, features = [
    'std',
] }

client_sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", tag = "v0.9.0", features = [
    "risc0",
], optional = true }

openidconnect = { version = "4.0.0" }

jsonwebtoken = "9"

hyle_model = { git = "https://github.com/hyle-org/hyle", package = "hyle-model", tag = "v0.9.0", default-features = false }

oidc_provider = { path = "../oidc_provider" }

url = { version = "2.5.4" }

dotenv = { version = "0.15.0" }

[dev-dependencies]
# Activate client in examples.
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", tag = "v0.9.0", features = [
    "full-model",
] }

oidc_identity = { path = ".", features = ["client"] }

client_sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", tag = "v0.9.0", features = [
    "risc0",
    "rest",
] }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

base64 = "0.22.1"
rsa = "0.9.7"

[features]
default = []
client = ["dep:client_sdk"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
