[package]
name = "oidc_provider"
version = "0.1.0"
edition = "2021"
# license = { workspace = true }
rust-version = "1.84"

[dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", tag = "v0.9.0" }

serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }


anyhow = "1.0.95"
bincode = { version = "2.0.0-rc.3" }

openidconnect = { version = "4.0.0" }

jsonwebtoken = "9"

hyle_model = { git = "https://github.com/hyle-org/hyle", package = "hyle-model", tag = "v0.9.0", default-features = false }
hashbrown = "0.15.2"
